# Olio_ohjelmointi

./: README.md
Olio_kotitehtava3/: kotitehtava 3 korjattu.pptx
Olio_kotitehtava3/build-olio_kotitehtava3-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
Olio_kotitehtava3/olio_kotitehtava3/: CMakeLists.txt  chefs.cpp  chefs.h  main.cpp
build-olio_kotitehtava1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
olio_kotitehtava1/: CMakeLists.txt  main.cpp
olio_kotitehtava2/: CMakeLists.txt  Game.h  game.cpp  kotitehtava 2.pptx  main.cpp
